--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-repository: ahmadateya/resume-theme
+repository: Haki-Malai/Resume
 favicon: images/favicon.ico
 
 # Content configuration version
