--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-repository: Haki-Malai/Resume
+repository: sproogen/resume-theme
 favicon: images/favicon.ico
 
 # Content configuration version
