--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-repository: sproogen/resume-theme
+repository: Haki-Malai/Resume
 favicon: images/favicon.ico
 
 # Content configuration version
@@ -32,18 +32,12 @@ linkedin_username: ahmadateya
 
 # Additional icon links
 additional_links:
-- title: Pdf Download
-  icon: far fa-file-pdf
-  url: https://github.com/ahmadateya/Resume/raw/main/pdf/cv.pdf
-- title: Send mail to ahmad.m.ateya@gmail.com
-  icon: fas fa-envelope
-  url: mailto:ahmad.m.ateya@gmail.com
-- title: itsgoingto.be
-  icon: fas fa-globe
-  url: https://ahmadateya.me
-# - title: another link
-#   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
-#   url: Link url (eg. https://google.com)
+  - title: Pdf Download
+    icon: far fa-file-pdf
+    url: https://github.com/Haki-Malai/Resume/raw/main/pdf/cv.pdf
+  - title: Send mail to ahmad.m.ateya@gmail.com
+    icon: fas fa-envelope
+    url: mailto:ahmad.m.ateya@gmail.com
 
 # Google Analytics and Tag Manager
 # Using more than one of these may cause issues with reporting
@@ -52,7 +46,7 @@ additional_links:
 # google_analytics: "UA-00000000-0"
 
 # About Section
- about_title: About Me
+# about_title: About Me
 about_profile_image: images/profile.jpeg
 about_content: | # this will include new lines to allow paragraphs
   Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
@@ -64,66 +58,134 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        title: Super awesome project
-        link: github.com/sproogen
-        # link_text: Project Website
+      - title: Sudoku Solver
+        link: https://github.com/Haki-Malai/sudoku-smart-solver
+        link_text: Project Website
         additional_links:
-          - title:  sproogen/modern-resume-theme
+          - title:  Haki-Malai/sudoku-smart-solver
             icon: fab fa-github
-            url: github.com/sproogen/modern-resume-theme
+            url: github.com/Haki-Malai/sudoku-smart-solver
           # - title:  Github page for project (eg. sproogen/modern-resume-theme)
           #   icon: fab fa-github
           #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
         quote: >
-          This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
+          Solving sudokus is a complex mathematics problem
         description: | # this will include new lines to allow paragraphs
-          I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
+          This project was done with the purpose of me learning some react-js, php and java. Te a sudoku solver was chosen from me because it may sound simple but in reality if someone has or wants to be able to solve a sudoku really fast it is necessery to use double-linked lists as with backtracking very often it is needed a big number of recursions for the solution of the problem. Also, it is necessery to have a server that solver the problem as JavaScript has a limit on recursions that can occur, even if double linked lists will be used. This use of linked lists is called "Dancing Links".
+
+      - title: ''
+
+
+      - layout: top-middle
+      - title: Identifying Covid-19 infection cases in Twitter text-A Machine Learning Approach
+        link: https://github.com/Haki-Malai/Covid-19-Tweet-Classifier
+        link_text: Project Website
+        additional_links:
+          - title:  Haki-Malai/Covid-19-Tweet-Classifier
+            icon: fab fa-github
+            url: github.com/Haki-Malai/Covid-19-Tweet-Classifier
+          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
+          #   icon: fab fa-github
+          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
+        quote: >
+          This project was almost published as a scientific paper but due to cooperation issues i had to cancel it.
+        description: | # this will include new lines to allow paragraphs
+          This project was made for the course called "Language Technology". The main idea behind the work described is that social media are able to provide large datasets which can be helpful in identifying certain patterns that may occur in social media text, and in helping to automatically reveal cases of virus infections. My constribution to this project was:
+          - Collected Tweets and assign then to my associates so they label them as true or false
+          - Used SMOTE to bring balance dataset
+          - Applied machine learning algoriths on the data
+          - Created a bidirectional recurrent neural network
+          - Trained the bidirectional recurrent neural network using 10-fold cross validation
+          - Created the GitHub repository
+      - title: ''
+
+      - title: Pac-Man JavaScript
+        link: https://github.com/Haki-Malai/Games/tree/main/Pac-Man%20JavaScript
+        link_text: Github Link
+        additional_links:
+          - title:  Haki-Malai/Games/Pac-Man JavaScript
+            icon: fab fa-github
+            url: github.com/Haki-Malai/Games/tree/main/Pac-Man%20JavaScript
+          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
+          #   icon: fab fa-github
+          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
+        quote: >
+          The idea was to learn through this project but the result was amazing.
+        description: | # this will include new lines to allow paragraphs
+          This project was made for the course called "Entertainment Technology Software and Virtual Worlds". We were asked to build any game we like and i choose to implement Pac-Man using Vanilla JavaScript in order to master the fundumentals of HTML5, CSS and JavaScript. I am very proud of the result as it is not a casual Pac-Man implementation. I have even managed to sell a version of this game on fiverr.com.
+      - title: ''
+
+      - title: nn_audio
+        link: https://github.com/Haki-Malai/nn_audio
+        link_text: Github Link
+        additional_links:
+          - title:  Haki-Malai/nn_audio
+            icon: fab fa-github
+            url: github.com/Haki-Malai/nn_audio
+        quote: >
+          A simple script for everyone to make his own audio classification model.
+        description: | # this will include new lines to allow paragraphs
+          This project was made for the course called "Speech and Audio Processing".
+      - title: ''
+
+      - title: Other JavaScript Games
+        link: https://github.com/Haki-Malai/Games
+        link_text: Github Link
+        additional_links:
+          - title:  Haki-Malai/Games
+            icon: fab fa-github
+            url: github.com/Haki-Malai/Games
+          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
+          #   icon: fab fa-github
+          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
+        quote: >
+          A collection of games using HTML5, CSS and Javascript
+        description: | # this will include new lines to allow paragraphs
+          Some of these were made for clients on fiverr and have mobile versions. Some of them were sudoku variations and tetris.
+      - title: ''
+
+      - title: Simple TCP-IP Chat
+        link: https://github.com/Haki-Malai/Twisted-Simple-Tcp-Chat
+        link_text: Github Link
+        additional_links:
+          - title:  Haki-Malai/Twisted-Simple-Tcp-Chat
+            icon: fab fa-github
+            url: github.com/Haki-Malai/Twisted-Simple-Tcp-Chat
+          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
+          #   icon: fab fa-github
+          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
+        quote: >
+          In my attemp to make an online rock, paper, scissors game i also created a group chat.
+        description: | # this will include new lines to allow paragraphs
+          This is a classic server and client implimentation using python and a library called "Twisted". Everyone that connects to the server receives every message send in it, so it basically is a big group chat. Messages are being send and received through the commant line.
 
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
+        title: Freelancing on Fiverr
+        link: fiverr.com
         # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
+        sub_title: Freelancer
+        caption: November 2020 - Present
         quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+          2d game development for desktop and mobile and machine learning applications.
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+          Collected a lot of experience on dealing with clients and giving them what they ask for on a deadline. Helped me to maintain my skillset and make some side money.
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: Al-Azhar University
-        caption: Graduated in 2022
-        sub_title: BSc Computer Engineering
-#        quote: >
-#          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
-        description: | # this will include new lines to allow paragraphs
-          During study time I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+        title: Ionian University
+        caption: 2017 - 2021
+        sub_title: Department of Informatics
+        quote: >
+          The Ionian University (Greek: Iόνιο Πανεπιστήμιο) is a university located in the Ionian Islands (region), Greece. It is one of the newest institutions of Higher Education in Greece, along with the University of the Aegean and the University of Thessaly.
+        # description: | # this will include new lines to allow paragraphs
+        #   During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
 
-          I spent a some of my free time as a committee member of the **AZEX** taking on roles such as *Technical* and *Vice-President*.
-
-  - title: Skills
-    layout: text
-    content: | # this will include new lines to allow paragraphs
-      Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
-      - ![Golang](https://img.shields.io/badge/-Golang-gray?style=flat-square&logo=Go)
-      - ![PHP](https://img.shields.io/badge/-PHP-00599C?style=flat-square&logo=php)
-      - ![Linux](https://img.shields.io/badge/-Linux-gray?style=flat-square&logo=linux)
-      - ![PostgreSQL](https://img.shields.io/badge/-PostgreSQL-336791?style=flat-square&logo=postgresql)
-      - ![MySQL](https://img.shields.io/badge/-MySQL-gray?style=flat-square&logo=mysql)
-      - ![Docker](https://img.shields.io/badge/-Docker-black?style=flat-square&logo=docker) ![AWS](https://img.shields.io/badge/Amazon%20AWS-232F3E?style=flat-square&logo=amazon-aws) ![Git](https://img.shields.io/badge/-Git-black?style=flat-square&logo=git) ![GitHub](https://img.shields.io/badge/-GitHub-181717?style=flat-square&logo=github) ![Kubernetes](https://img.shields.io/badge/-Kubernetes-gray?style=flat-square&logo=kubernetes)
-      <img src="https://img.shields.io/badge/-Golang-gray?style=flat-square&logo=Go" alt="drawing" width="200" height="500"/>
-
-
-      Look at this cool image  
-      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
-
+        #   I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
   - title: Skills
     layout: skills
     content:
@@ -137,16 +199,28 @@ content:
         level: 4
       - title: WordPress/Ruby
         level: 3
+  - title: A Little More About Me
+    layout: text
+    content: | # This will include new lines to allow paragraphs
+      Alongside my interests in web and software developing some of my other interests and hobbies are:
+      - Lifting weights
+      - Riding the bike
+      - Hanging out with friends
+      - Playing video games
+      - Cooking
+      - Studying and playing chess
+      - Listening to music
+
 # Footer
 footer_show_references: false
-# references_title: References on request (Override references text)
+# References_title: References on request (Override references text)
 
 # Build settings
-remote_theme: sproogen/resume-theme
+remote_theme: Haki-Malai/Resume
 
 sass:
   sass_dir: _sass
   style: compressed
 
 plugins:
- - jekyll-seo-tag
+  - jekyll-seo-tag
