--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-repository: Haki-Malai/Resume
+repository: sproogen/resume-theme
 favicon: images/favicon.ico
 
 # Content configuration version
@@ -216,7 +216,7 @@ footer_show_references: false
 # References_title: References on request (Override references text)
 
 # Build settings
-remote_theme: Haki-Malai/Resume
+remote_theme: sproogen/resume-
 
 sass:
   sass_dir: _sass
