--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ version: 2
 # Personal info
 name: Ahmad Ateya
 title: Software Engineer
-Email: ahmad.m.ateya@gmail.com
+email: ahmad.m.ateya@gmail.com
 phone: 01150326768
 Location: Cairo - Egypt
 #website: ahmadateya.me
