update readme file

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ Location: Cairo - Egypt
 #website: ahmadateya.me
 
 # Dark Mode (true/false/never)
-darkmode: false
+darkmode: true
 
 # Social links
 #twitter_username: facespics
