--- a/_config.yml
+++ b/_config.yml
@@ -117,6 +117,7 @@ exclude:
   - Rakefile
   - README
   - tmp
+  - old-site # ignore my old website folder
   - /docs # ignore Minimal Mistakes /docs
   - /test # ignore Minimal Mistakes /test
 keep_files:
